--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jet-anchor",
+  "name": "jet-protocol",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -26,7 +26,7 @@
     "@project-serum/serum": "^0.13.60",
     "@pythnetwork/client": "^2.0.0",
     "@solana/spl-token": "^0.1.3",
-    "@solana/web3.js": "^1.20.0",
+    "@solana/web3.js": "^1.30.2",
     "@types/mocha": "^8.2.2",
     "@types/yargs": "^17.0.2",
     "binance-api-node": "^0.0.0",
